setup.sh code fix; minor adjustments